# tidal-playground

./: LICENSE  Main.hs  README.md  Setup.ghci  go  setup  stack.yaml  tidal  tidal-install.cabal  tidal-playground.cabal  tidalvim
supercollider/: run  startup.scd
