name:                tidal-install
version:             0.9.4
homepage:            https://github.com/rumblesan/tidal-install#readme
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           2017 Guy John
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tidal-install
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base < 5
                     , hint
                     , tidal
                     , tidal-midi
